# verichord

./: Cargo.toml  LICENSE  build.rs
src/: algo_load.rs  install.rs  lib.rs  main.rs  midi.rs  ui.rs
src/chord/: chord.rs  data.rs  mod.rs
src/metronome/: mod.rs
src/rhythm/: weight.rs
src/ui/: helpers.rs  mod.rs  state.rs  widgets.rs
