[package]
name = "verichord"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
midir = "0.10"
wmidi = "4.0"
# For timestamp formatting
chrono = { version = "0.4", features = ["alloc"] }
# Ensure winapi features used by eframe on Windows are enabled
winapi = { version = "0.3", features = ["winuser", "windef"] }
libloading = "0.9"

# Metronome audio/playback
rodio = "0.21"
spin_sleep = "1.3"
rfd = "0.17"
