[package]
name = "verichord"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
resvg = "0.46"
usvg = "0.46"
tiny-skia = "0.11"
png = "0.18"
ico = "0.5"
icns = "0.3"
winres = "0.1"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
midir = "0.10"
wmidi = "4.0"
rfd = "0.17"

# For timestamp formatting
chrono = { version = "0.4", features = ["alloc"] }

# Ensure winapi features used by eframe on Windows are enabled
winapi = { version = "0.3", features = ["winuser", "windef"] }
libloading = "0.9"

# Metronome audio/playback
rodio = "0.21"
spin_sleep = "1.3"

# SVG rendering for embedded icon (rasterized at runtime from embedded bytes)
resvg = "0.46"
tiny-skia = "0.11"

# Runtime dependencies used for creating platform app bundles at install-time
png = "0.18"
icns = "0.3"
directories = "6.0"
